--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ feedparser==5.2.1
 Flask==1.0.2
 fuzzywuzzy==0.18.0
 gnewsclient==1.12
+gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.7
 itsdangerous==1.1.0
